--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <div class="container">
         <h1 class="display-4">Hello, I'm Angel Nadayag</h1>
         <p class="lead">A Passionate Developer and Designer</p>
+        <img src="ange.png">
       </div>
     </section>
 
@@ -51,8 +52,7 @@
       <div class="container">
         <h2 class="text-center">About Me</h2>
         <p class="text-center mt-3">
-          Briefly introduce yourself, your background, skills, and your passion
-          in the industry.
+          me and myself 
         </p>
       </div>
     </section>
@@ -65,11 +65,22 @@
        
           <div class="col-md-4">
             <div class="card">
-              <img src="project1.jpg" class="card-img-top" alt="Project 1" />
+              <img src="proj.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <h5 class="card-title">Project 1</h5>
-                <p class="card-text">Description of your first project.</p>
-                <a href="#" class="btn btn-primary">View Project</a>
+                <h5 class="card-title">Project</h5>
+                <p class="card-text">My product list project</p>
+                <a href="https://angelnadayag.github.io/dashboard/" class="btn btn-primary">View Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card">
+              <img src="proj 2.png" height="223" weight="400" class="card-img-top" alt="Project 2" />
+              <div class="card-body">
+                <h5 class="card-title">Project</h5>
+                <p class="card-text">My JSON project</p>
+                <a href="https://angelnadayag.github.io/Angel_JSON/" class="btn btn-primary">View Project</a>
               </div>
             </div>
           </div>
