--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    
   </head>
   <body>
-   
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">My Portfolio</a>
@@ -96,11 +96,11 @@
         <form class="mt-4">
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" required />
+            <input type="text" id="name" name="name" required><br> 
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" required />
+            <input type="email" id="email" name="email" required><br>
           </div>
           <div class="mb-3">
             <label for="message" class="form-label">Message</label>
@@ -115,8 +115,6 @@
         </form>
       </div>
     </section>
-
-
     <footer class="bg-dark text-light text-center py-3">
       <div class="container">
         <p>&copy; 2024 Angel Nadayag. All Rights Reserved.</p>
@@ -124,5 +122,30 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // Initialize EmailJS with your user ID
+(function () {
+  emailjs.init("lFhgZbS-cxtLYKvIa");
+})();
+
+// Function to send email using EmailJS
+document
+  .getElementById("contact-form")
+  .addEventListener("submit", function (event) {
+    event.preventDefault();
+
+    // Send the email using the form data
+    emailjs.sendForm("service_5z92i2r", "template_ormzmr8", this).then(
+      function () {
+        alert("Message Sent Successfully!");
+      },
+      function (error) {
+        alert("Failed to send the message: " + JSON.stringify(error));
+      }
+    );
+  });
+
+    </script>
+
   </body>
 </html>
