--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>I am a [Your Profession] with a strong passion for [Your Field]. My expertise includes [Skills] and I am committed to [Your Mission].</p>
+                <p>I am an IT students with a strong passion for my field.</p>
             </div>
             <div class="about-img">
                 <img src="ange.png" alt="Your Image">
